# quicksave

./: Cargo.toml  README.md
quicksave/: Cargo.toml
quicksave/src/: lib.rs  main.rs
quicksave/tests/: test_macros.rs
quicksave_macros/: Cargo.toml  README.md
quicksave_macros/src/: lib.rs
